<resources>
    <string name="app_name">AppliResto</string>
    <string name="modifier_profil">Modifier Profil</string>
    <string name="mail_utilisateur">Mail Utilisateur :</string>
    <string name="email">Email</string>
    <string name="pseudo">Pseudo :</string>
    <string name="ancien_mot_de_passe">Ancien mot de passe :</string>
    <string name="nouveau_mot_de_passe">Nouveau mot de passe :</string>
    <string name="confirmer_le_nouveau_mot_de_passe">Confirmer le nouveau mot de passe :</string>
    <string name="modifier">Modifier</string>
    <string name="retour">Retour</string>
    <string name="nouveau_pseudo">nouveau pseudo</string>
</resources>